src/objects/Team_colors_for_TV_dashboard__c.object
<CustomObject>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excel_Color_Number__c</fullName>
        <label>Excel Color Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Abbreviation__c</fullName>
        <label>Team Abbreviation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Team color for TV dashboard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Team_Abbreviation__c</columns>
        <columns>Color__c</columns>
        <columns>Excel_Color_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team colors for TV dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>